[gd_scene load_steps=11 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://HelloWorld.tscn" type="PackedScene" id=2]
[ext_resource path="res://Downloads/gfx/blackboard.jpg" type="Texture" id=3]
[ext_resource path="res://Downloads/gfx/Feltpen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Downloads/gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Downloads/gfx/blue_button12.png" type="Texture" id=6]
[ext_resource path="res://Story0.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelloWorld" parent="." instance=ExtResource( 2 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 976.0
margin_bottom = 437.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 441.0
margin_right = 976.0
margin_bottom = 514.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 810.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 822.0
margin_right = 895.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 0 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 907.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "OK"

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "a name", "a noun", "an adverb", "an adjective" )
story = "Once upon a time %s watched %s and %s it was the %s movie of the last two decades."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "a name", "a noun", "an adjective", "a past tense verb", "another name", "another adjective" )
story = "%s once went to %s, which was %s. Later, after %s, %s joined in and it was %s."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerInput" to="." method="_on_PlayerInput_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
